<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/marginButtonAll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/editImageIV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/paddingAll" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/paddingAll">

        <TextView
            android:id="@+id/locationET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintLocation"
            android:inputType="text"
            android:padding="@dimen/marginButtonAll"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <EditText
            android:id="@+id/imgDescriptET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descriptHint"
            android:inputType="textMultiLine"
            android:maxLength="@integer/maxChars"
            android:padding="@dimen/marginButtonAll"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    </LinearLayout>

    <Button
        android:id="@+id/publishBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publishPhoto" />

</LinearLayout>